ncurses (6.2+20210905-1) UNRELEASED; urgency=low

  * New upstream patchlevel.
  * Drop patch 02-fix-mlterm.diff, applied upstream.

 -- Sven Joachim <svenjoac@gmx.de>  Mon, 06 Sep 2021 19:18:17 +0200

ncurses (6.2+20201114-4) unstable; urgency=medium

  * Source-only upload for migration to testing, no changes.

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 26 Aug 2021 18:39:10 +0200

ncurses (6.2+20201114-3) unstable; urgency=medium

  [ Debian Janitor ]
  * Remove constraints unnecessary since stretch:
    + ncurses-term: Drop versioned constraint on suckless-tools in Replaces.
    + ncurses-term: Drop versioned constraint on suckless-tools in Breaks.
    + libtinfo5: Drop versioned constraint on dialog in Breaks.

  [ Jordi Mallach ]
  * Introduce a libncursesw6-udeb package, needed by newer nano versions
    (Closes: #976275).

  [ Sven Joachim ]
  * Add new upstream signing key 19882D92DDA4C400C22C0D56CC2AF4472167BE03
    to debian/upstream/signing-key.asc.

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 22 Aug 2021 08:29:53 +0200

ncurses (6.2+20201114-2) unstable; urgency=medium

  * New patch 02-fix-mlterm.diff, cherry-picked from the 20201205 upstream
    patchlevel.
    - Correct mlterm3 kf1-kf4 (Closes: #975322).
    - Add flash to mlterm3.
  * Refresh Debian patches.

 -- Sven Joachim <svenjoac@gmx.de>  Fri, 01 Jan 2021 16:02:10 +0100

ncurses (6.2+20201114-1) unstable; urgency=medium

  * New upstream patchlevel.
    - Add tmux-direct terminfo entry (Closes: #895754).
  * Add Breaks on cowdancer (<< 0.89~) to libncurses6 (Closes: #971672).
  * Upgrade Standards-Version to 4.5.1, no changes needed.

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 19 Nov 2020 18:08:43 +0100

ncurses (6.2+20200918-1) unstable; urgency=medium

  * New upstream patchlevel.
    - Corrected condition for appending curses.events to the generated
      curses.h (report by Sven Joachim, Closes: #970577).
   * Version the Provides of the transitional -dev packages
     by libncurses-dev.
