@@ -4,7 +4,7 @@ Description: Fix backspace key description in some terminfo entries
 Bug-Debian: https://bugs.debian.org/237997
 Bug-Debian: https://bugs.debian.org/602300
 Forwarded: not-needed
-Last-Update: 2019-07-17
+Last-Update: 2021-09-06
 
 ---
  misc/terminfo.src |    4 ++--
@@ -12,7 +12,7 @@ Last-Update: 2019-07-17
 
 --- a/misc/terminfo.src
 +++ b/misc/terminfo.src
-@@ -6348,7 +6348,7 @@ Eterm|Eterm-color|Eterm with xterm-style
+@@ -6621,7 +6621,7 @@ Eterm|Eterm-color|Eterm with xterm-style
  	home=\E[H, hpa=\E[%i%p1%dG, ht=^I, hts=\EH, ich=\E[%p1%d@,
  	il=\E[%p1%dL, il1=\E[L, ind=\n, is1=\E[?47l\E>\E[?1l,
  	is2=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;3;4;6l\E[4l, kNXT@,
@@ -21,12 +21,12 @@ Last-Update: 2019-07-17
  	kc1=\E[8~, kc3=\E[6~, kent=\EOM, khlp=\E[28~, kmous=\E[M,
  	mc4=\E[4i, mc5=\E[5i, rc=\E8, rev=\E[7m, ri=\EM, rmacs=^O,
  	rmam=\E[?7l, rmcup=\E[2J\E[?47l\E8, rmir=\E[4l, rmkx=,
-@@ -7459,7 +7459,7 @@ screen|VT 100/ANSI X3.64 virtual termina
+@@ -7855,7 +7855,7 @@ screen|VT 100/ANSI X3.64 virtual termina
  	dl=\E[%p1%dM, dl1=\E[M, ed=\E[J, el=\E[K, el1=\E[1K,
  	enacs=\E(B\E)0, flash=\Eg, home=\E[H, hpa=\E[%i%p1%dG,
  	ht=^I, hts=\EH, ich=\E[%p1%d@, il=\E[%p1%dL, il1=\E[L,
 -	ind=\n, indn=\E[%p1%dS, is2=\E)0, kbs=^H, kcbt=\E[Z,
 +	ind=\n, indn=\E[%p1%dS, is2=\E)0, kbs=^?, kcbt=\E[Z,
- 	kcub1=\EOD, kcud1=\EOB, kcuf1=\EOC, kcuu1=\EOA,
- 	kdch1=\E[3~, kend=\E[4~, kf1=\EOP, kf10=\E[21~,
- 	kf11=\E[23~, kf12=\E[24~, kf2=\EOQ, kf3=\EOR, kf4=\EOS,
+ 	kcub1=\EOD, kcud1=\EOB, kcuf1=\EOC, kcuu1=\EOA, kf1=\EOP,
+ 	kf10=\E[21~, kf11=\E[23~, kf12=\E[24~, kf2=\EOQ, kf3=\EOR,
+ 	kf4=\EOS, kf5=\E[15~, kf6=\E[17~, kf7=\E[18~, kf8=\E[19~,
